[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Images/Circulo-Negro-03-02.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Enemy_explotion.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/IA_explotion.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 320.0

[sub_resource type="CircleShape2D" id=3]
radius = 448.0

[node name="Enemy_explotion" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="EnemyCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplotionRadio" type="Area2D" parent="."]

[node name="ExplotionRadius" type="CollisionShape2D" parent="ExplotionRadio"]
shape = SubResource( 2 )

[node name="IA" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ExplotionTimer" type="Timer" parent="IA"]

[node name="ExplotionWaitTimer" type="Timer" parent="IA"]
wait_time = 0.3

[node name="Detector" type="Area2D" parent="IA"]

[node name="DetectorShape" type="CollisionShape2D" parent="IA/Detector"]
shape = SubResource( 3 )

[connection signal="body_entered" from="ExplotionRadio" to="." method="_on_ExplotionRadio_body_entered"]
[connection signal="body_exited" from="ExplotionRadio" to="." method="_on_ExplotionRadio_body_exited"]
[connection signal="timeout" from="IA/ExplotionTimer" to="IA" method="_on_ExplotionTimer_timeout"]
[connection signal="timeout" from="IA/ExplotionWaitTimer" to="IA" method="_on_ExplotionWhaitTimer_timeout"]
[connection signal="body_entered" from="IA/Detector" to="IA" method="_on_Detector_body_entered"]
[connection signal="body_exited" from="IA/Detector" to="IA" method="_on_Detector_body_exited"]
